bpo-29602: fix signed zero handling in complex constructor